# nucleo-f411re

./: .gitignore  Cargo.toml  README.md
examples/: gpio_hal_blinky.rs  serial_hal_blocking_echo.rs
src/: lib.rs
